Corrección menor en estilo del formulario de login

--- a/css/styles.css
+++ b/css/styles.css
@@ -449,7 +449,7 @@ input[type=radio]{
         line-height: 30px;
     }
 
-    a.nav-menu-item.nav-menu-login {
+    .nav-menu-login {
         line-height: 60px;
     }
 
