--- a/css/styles.css
+++ b/css/styles.css
@@ -493,6 +493,46 @@ input[type=radio]{
     margin-top: 0.5rem;
   }
 
+/* Estilos para el campo de búsqueda en el header */
+.search-box {
+    width: 50%;
+    max-width: 400px;
+    padding: 0.5rem 1rem;
+    font-size: 1rem;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    transition: box-shadow 0.3s, border-color 0.3s;
+}
+
+.search-box:focus {
+    border-color: #007BFF;
+    box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
+    outline: none;
+}
+
+/* Estilos para la barra de búsqueda en la sección */
+.search-bar {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 1rem;
+}
+
+.search-bar input {
+    width: 50%;
+    max-width: 400px;
+    padding: 0.5rem 1rem;
+    font-size: 1rem;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    transition: box-shadow 0.3s, border-color 0.3s;
+}
+
+.search-bar input:focus {
+    border-color: #007BFF;
+    box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
+    outline: none;
+}
+
 /* Estilos responsivos para pantallas pequeñas (máximo 768px) */
 @media (max-width: 768px) {
     .container-section {   
